Fix cross icon alignment

--- a/styles.less
+++ b/styles.less
@@ -125,3 +125,15 @@ atom-workspace > atom-workspace-axis > atom-panel-container.left > atom-panel > 
     display: none;
   }
 }
+
+.list-tree.has-collapsable-children .list-nested-item > .list-item::before {
+  top: -5px !important;
+}
+
+.tree-view-open-files .close-open-file::before {
+  top: -3px !important;
+}
+
+.file.list-item.selected {
+  top: -6px !important;
+}
